feat: add prediction term settings
